# masteringCmake

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Main.java  Makefile  Solution.java  a  build.sh  config.asm  config.h  config.h.in  configure  configure.test.sh  configure_android.sh  ffversion.h  main.c  main.c.bak  main.cpp  make_build.sh  mastering_cmake.docx  mastering_cmake_.txt  masteringcmake.txt  test.cpp  test.sh  test01.cpp  test32.txt  test64.txt
libavcodec/: codec_list.c
libavfilter/: filter_list.c
libavutil/: CMakeLists.txt  Makefile  avutil.h  file_open.c  intmath.c  log.c  mathematics.c  rational.c  utils.c
libavutil/aarch64/: CMakeLists.txt
libavutil/arm/: CMakeLists.txt
libavutil/tests/: CMakeLists.txt  parseutils.c
libavutil/x86/: CMakeLists.txt
script/: start_lldb_server_remote_android.sh  stop_lldb_server_remote_android.sh
